[package]
name = "tzgrep"
version = "0.1.2"
edition = "2021"
authors = ["Toru3 <ryuutet@gmail.com>"]
description = "grep tar.gz"
license = "AGPL-3.0-or-later"
repository = "https://gitlab.com/Toru3/tzgrep"
keywords = ["grep", "tar"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
anyhow = "1.0.70"
bzip2 = "0.4.4"
clap = { version = "4.2.1", features = ["derive"] }
flate2 = "1.0.25"
itertools = "0.10.5"
regex = "1.7.3"
thiserror = "1.0.40"
xz = "0.1.0"
zstd = "0.12.3"
